<resources>
    <string name="app_name">Capstone-Yogain</string>
    <string name="caps_name">YOGAIN</string>
    <string name="onBoardDesc1">Yoga practice helps improve body and posture awareness.\nBy improving body posture, you can prevent and reduce spine and muscle problems.</string>
    <string name="onBoard1">on Board 1</string>
    <string name="skip">skip</string>
    <string name="onBoard2">on Board 2</string>
    <string name="onBoardDesc2">Yoga practice helps improve body and posture awareness.\nBy improving body posture, you can prevent and reduce spine and muscle problems.</string>
    <string name="onBoard3">on Board 3</string>
    <string name="onBoardDesc3">Step-by-Step Guide: The app provides step-by-step guidance for each yoga movement and pose, helping users understand and execute them properly.</string>
    <string name="title_onBoard3">Guidelines with AI</string>
    <string name="title_onBoard2">Relaxation and Stress Reduction</string>
    <string name="title_onBoard1">Posture Improvement</string>
    <string name="lets_healty">Let\'s Healthy with Us</string>
    <string name="lets_healthy">Let\'s Healthy with Us</string>
    <string name="welcome_login">Welcome to Yogain App</string>
    <string name="desc_welcome_login">"If you don’t have account please register early"</string>
    <string name="desc_welcome_register">"After registering please login to enter our main page "</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don’t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">====================  Or  ====================</string>
    <string name="google">Google</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome_register">Welcome to Register Page</string>
    <string name="name">name</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="name_user">User</string>
    <string name="hello">Hello</string>
    <string name="good_morning">Good Morning</string>
    <string name="poses">Poses</string>
    <string name="see_all">see all</string>
    <string name="tree_poses">Tree Poses</string>
    <string name="five_mins">5 mins</string>
    <string name="graphics">Graphics</string>
    <string name="description">Description</string>
    <string name="check_your_camera">"Check your pose with camera:  "</string>
    <string name="camera">Camera</string>
    <string name="default_web_client_id">Default web</string>
    <string name="fields_cannot_empty">Field\'s cannot be empty</string>
    <string name="logo">logo</string>
    <string name="title">YOGAIN APP</string>
    <string name="password_more">password should be 8 or more</string>
    <string name="isNotValid">The email is not valid</string>
    <string name="recently_poses">Recently Poses</string>
    <string name="orLoginWith">Or Login With</string>
    <string name="empty_password">pasword is empty</string>
    <string name="error">error</string>
    <string name="empty_email">email is empty</string>
    <string name="empty_name">name is empty</string>
    <string name="email_have_been_register">email have been registered</string>
    <string name="login_success">login success</string>
    <string name="register_success">Success Create Account</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="calendar">calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="forget_password">forget password?</string>
    <string name="Logout">Logout</string>
</resources>