<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".presentation.on_boarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/iv_onBoard1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/dimen_120dp"
        android:contentDescription="@string/onBoard1"
        android:src="@drawable/onboard_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_onBoard1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_onBoard1"
        android:text="@string/title_onBoard1"
        android:gravity="center"
        style="@style/titleMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_onBoard1"
        app:layout_constraintEnd_toEndOf="@id/iv_onBoard1"
        />

        <TextView
        android:id="@+id/tv_onBoard1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onBoardDesc1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onBoard1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/dimen_16dp"
        />

    <ImageView
        android:id="@+id/iv_onBoard2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/onboard_2"
        android:contentDescription="@string/onBoard2"
        android:layout_marginTop="@dimen/dimen_120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_title_onBoard2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_onBoard2"
        android:text="@string/title_onBoard2"
        android:gravity="center"
        style="@style/titleMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_onBoard2"
        app:layout_constraintEnd_toEndOf="@id/iv_onBoard2"
        />

    <TextView
        android:id="@+id/tv_onBoard2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onBoardDesc2"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onBoard2"
        app:layout_constraintStart_toStartOf="@id/iv_onBoard2"
        app:layout_constraintEnd_toEndOf="@id/iv_onBoard2"
        />

    <ImageView
        android:id="@+id/iv_onBoard3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/onboard_3"
        android:contentDescription="@string/onBoard3"
        android:layout_marginTop="@dimen/dimen_120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_onBoard2"
        />

    <TextView
        android:id="@+id/tv_title_onBoard3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_onBoard3"
        android:text="@string/title_onBoard3"
        android:gravity="center"
        style="@style/titleMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_onBoard3"
        app:layout_constraintEnd_toEndOf="@id/iv_onBoard3"
        />

    <TextView
        android:id="@+id/tv_onBoard3"
        style="@style/bodySmall"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/onBoardDesc3"
        app:layout_constraintEnd_toEndOf="@id/iv_onBoard3"
        app:layout_constraintStart_toStartOf="@id/iv_onBoard3"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onBoard3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        app:altSrc="@drawable/ic_full_circle"
        app:layout_constraintStart_toStartOf="parent"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/btn_onBoard"
        app:layout_constraintBottom_toBottomOf="@id/btn_onBoard"
        android:layout_marginStart="@dimen/dimen_24dp"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/md_theme_light_secondary"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        app:altSrc="@drawable/ic_full_circle"
        android:foregroundGravity="center_vertical"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="@id/btn_onBoard"
        app:layout_constraintBottom_toBottomOf="@id/btn_onBoard"
        app:layout_constraintStart_toEndOf="@id/menu1"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/md_theme_light_secondary"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_onBoard"
        app:altSrc="@drawable/ic_full_circle"
        app:layout_constraintStart_toEndOf="@id/menu2"
        app:layout_constraintTop_toTopOf="@id/btn_onBoard"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/md_theme_light_secondary" />


    <Button
        android:id="@+id/btn_onBoard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        />

    <Button
        android:id="@+id/start_with_us"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/lets_healthy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:visibility="gone"
        />


</androidx.constraintlayout.motion.widget.MotionLayout>