<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">
    
    <TextView
        android:id="@+id/tv_graphics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/graphics"
        style="@style/headlineSmall"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_56dp"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_detail_img"
        android:layout_width="380dp"
        android:layout_height="279dp"
        android:src="@drawable/yoga"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tv_graphics"
        app:riv_corner_radius="@dimen/dimen_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/bodyMedium"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_img"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/iv_detail_img"
        app:layout_constraintEnd_toEndOf="@id/iv_detail_img"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:textColor="@color/black"
        />
    
    <TextView
        android:id="@+id/check_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_camera"
        style="@style/titleSmall"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dimen_120dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/check_camera"
        android:layout_margin="@dimen/dimen_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/camera"
        />



</androidx.constraintlayout.widget.ConstraintLayout>